GOBE-56: clean code and create group challgene and join group challegen